--- a/css/base.css
+++ b/css/base.css
@@ -111,7 +111,7 @@ s,i,em{font-style:normal;text-decoration:none;}
     position: absolute;
     width: 15px;
     height: 20px;
-    background: url(/img/folder.png);
+    background: url(../img/folder.png);
     left: 5px;
     top: 5px;
 }
@@ -126,7 +126,7 @@ s,i,em{font-style:normal;text-decoration:none;}
     top: 5px;
     width: 19px;
     height: 19px;
-    background: url(/img/folder.png) no-repeat;
+    background: url(../img/folder.png) no-repeat;
 }
 
 .close-banner:hover{
@@ -149,7 +149,7 @@ s,i,em{font-style:normal;text-decoration:none;}
     width: 270px;
     height: 60px;
     display: block;
-    background: url(/img/icon.png) no-repeat;
+    background: url(../img/icon.png) no-repeat;
 }
 
 .search-input{
@@ -197,7 +197,7 @@ s,i,em{font-style:normal;text-decoration:none;}
     left: 7px;
     width: 20px;
     height: 20px;
-    background: url(/img/folder.png) no-repeat;
+    background: url(../img/folder.png) no-repeat;
 }
 
 .icon2 {
@@ -281,7 +281,7 @@ dl.last-dl {
     height: 169px;
     margin-right: 60px;
     padding-left: 17px;
-    background: url(/img/logo.png) no-repeat left bottom;
+    background: url(../img/logo.png) no-repeat left bottom;
 }
 
 .coverage h3 {
