--- a/CSSLearn/3.Email/css/style.css
+++ b/CSSLearn/3.Email/css/style.css
@@ -32,7 +32,8 @@ body {
     font-size: 20px;
     padding: 0 20px;
     vertical-align: middle;
-    transition: .2s;
+    transition: .4s;
+    z-index: 0;
 }
 
 .panel .btn-container .btn {
@@ -48,7 +49,8 @@ body {
     border-radius: 30px;
     margin-left: -170px;
     cursor: pointer;
-    transition: .2s;
+    transition: .4s;
+    z-index: 1;
 }
 
 .panel .btn-container:hover input {
