--- a/CSSLearn/8.Loading/css/style5.css
+++ b/CSSLearn/8.Loading/css/style5.css
@@ -11,4 +11,64 @@
     height: 36px;
     background-color: crimson;
     font-size: 0;
+    margin: 2px;
+}
+
+.loading5 .wrapper .item:nth-child(1) {
+    animation: loading5 4s infinite 0s;
+}
+
+.loading5 .wrapper .item:nth-child(2) {
+    animation: loading5 4s infinite 0.25s;
+}
+
+.loading5 .wrapper .item:nth-child(3) {
+    animation: loading5 4s infinite 0.5s;
+}
+
+.loading5 .wrapper .item:nth-child(4) {
+    animation: loading5 4s infinite 0.75s;
+}
+
+.loading5 .wrapper .item:nth-child(5) {
+    animation: loading5 4s infinite 1s;
+}
+
+.loading5 .wrapper .item:nth-child(6) {
+    animation: loading5 4s infinite 1.25s;
+}
+
+.loading5 .wrapper .item:nth-child(7) {
+    animation: loading5 4s infinite 1.5s;
+}
+
+.loading5 .wrapper .item:nth-child(8) {
+    animation: loading5 4s infinite 1.75s;
+}
+
+.loading5 .wrapper .item:nth-child(9) {
+    animation: loading5 4s infinite 2s;
+}
+
+@keyframes loading5 {
+    0% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+    5% {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    45% {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    55% {
+        transform: translateY(0px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
 }
